--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Pixel - Bowling & Entertainment in Thailand" />
     <meta property="og:description" content="Premium bowling and entertainment venues across Thailand, offering bowling, arcade games, beer pong, karaoke, food and drinks." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://i.ibb.co/ZrLBxmy/Screenshot-2025-05-24-043927.jpg" /> 
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://i.ibb.co/ZrLBxmy/Screenshot-2025-05-24-043927.jpg" />
     
     <!-- Press Start 2P font for pixelated text -->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
